spec/v0.3/reference.es.md
# Referencia de campos — OTE Spec 0.3.0

> 🤖 Generado a partir de los schemas — no lo edites a mano. Ejecuta `npm run build-reference`.
>
> Las reglas que un validador no puede comprobar (por qué el `id` no cambia nunca, por qué un evento cancelado sigue publicado) están en [README.md](README.md).

**Nivel** — `obligatorio`: sin él, el validador rechaza el documento. `recomendado`: el documento es válido sin él, pero un checker avisa — son los campos que deciden si el evento se puede encontrar, filtrar y seguir. Se leen de [`event.recommended.schema.json`](event.recommended.schema.json) y [`feed.recommended.schema.json`](feed.recommended.schema.json).

`obligatorio dentro de X` significa obligatorio **dentro de un objeto que es opcional**: un documento mínimo no necesita ninguno de los dos, pero un documento que traiga `X` tiene que dar el campo. Omitir el objeto entero sigue siendo válido.

**Por defecto** — el valor que un consumidor asume cuando el campo no está. Algunos no son literales: dentro de un feed, el evento que omite `license`, `organizers`, `textLanguage` o `specVersion` toma el del feed, y eso es lo que hace barato publicar un feed — se dice una vez y ningún evento lo repite. Una celda vacía afirma algo, no es un olvido: el campo **no tiene valor por defecto**, y su ausencia significa *desconocido* — nunca el valor tranquilizador. Un evento sin `attendanceMode` no es presencial, una entrada sin `availability` no está a la venta.

## `event` — Evento

Un evento de una comunidad técnica.

| Campo | Tipo | Nivel | Por defecto | Descripción | Ejemplos |
| --- | --- | :---: | :---: | --- | --- |
| `specVersion` | const: "0.3.0" | **obligatorio** | el `specVersion` del feed | Versión de OTE Spec a la que se adhiere el documento. | `"0.3.0"` |
| `id` | string (uri) | **obligatorio** | | Identificador estable y único a nivel global: una URL HTTP(S) bajo un dominio que controla quien publica — no necesariamente uno propio; una página canónica en una plataforma que usa (Meetup, GitHub Pages, LinkedIn) sirve igual de bien, porque lo que importa es que la URL sea estable y nadie más pueda acabar con esa misma. Se acuña una vez y no se reescribe jamás: es lo que permite a un consumidor actualizar el evento en vez de duplicarlo. | `"https://pyalmeria.example/eventos/2026-06-async"`<br>`"https://calendar.example/ics/rust-madrid#a1b2c3d4-uid"`<br>`"https://www.meetup.com/pyalmeria/events/123456789/"` |
| `url` | string (uri) | _recomendado_ | | URL canónica donde se describe el evento hoy. Puede cambiar con el tiempo; el `id` no. | `"https://pyalmeria.example/eventos/2026-06-async"` |
| `name` | string | **obligatorio** | | Nombre del evento. | `"PyAlmería — Introducción a async/await"` |
| `description` | string | _recomendado_ | | Descripción breve. Texto plano o Markdown. | `"Charla introductoria a la programación asíncrona en Python, con ejemplos en vivo."` |
| `image` | (string \| object)[] | _recomendado_ | | Imágenes promocionales del evento: cartel, portada, tarjeta. Es una lista en orden de preferencia — la PRIMERA es la principal, y a menudo la única que un destino puede usar. Las demás pueden ser otros recortes o resoluciones de esa misma imagen (Google pide 1:1, 4:3 y 16:9) o imágenes distintas; quien solo pueda mostrar una, muestra la primera, y nadie debe dar por hecho que la lista se renderiza como galería de fotos. Cada entrada es o bien una URL https pelada al fichero de imagen —nunca a una página que la muestre— o bien un objeto que añade texto alternativo. | `["https://rustmadrid.example/img/2026-06-16x9.png"]`<br>`[{"url":"https://rustmadrid.example/img/2026-06-16x9.png","alt":"Cartel: Ferris sobre fondo morado, «Rust Madrid · 16 junio · Impact Hub»"},"https://rustmadrid.example/img/2026-06-1x1.png","https://rustmadrid.example/img/2026-06-4x3.png"]` |
| `image[].url` | string (uri) | **obligatorio** dentro de `image[]` | | URL https absoluta del fichero de imagen, nunca de una página que la muestre. El mismo valor que lleva la forma de cadena pelada. | `"https://rustmadrid.example/img/2026-06-16x9.png"` |
| `image[].alt` | string | opcional | | Lo que la imagen MUESTRA, para quien no puede verla: lectores de pantalla, clientes de solo texto y cualquier render donde la imagen no cargue. Describe la foto, no el evento — el `name` y la `description` ya se están leyendo al lado, así que repetirlos hace que un lector de pantalla diga dos veces lo mismo. Sin «imagen de» ni «cartel que muestra»: el cliente ya anuncia que es una imagen. Se escribe en el `textLanguage` del documento, como el resto del texto libre, y se traduce con el mapa `translations` de esta misma entrada: el `alt` se lee en voz alta con la pronunciación del idioma que lo rodea, así que un `alt` en inglés dentro de un documento en español es peor accesibilidad que el problema que venía a resolver. Una imagen puramente decorativa no pinta nada en un feed, y aquí no hay cadena vacía: una imagen que no tiene nada que decir es una imagen que se deja fuera. | `"Cartel: Ferris sobre fondo morado, «Rust Madrid · 16 junio · Impact Hub»"`<br>`"Sala diáfana con unas 60 sillas y una pantalla al fondo"` |
| `image[].translations` | object | opcional | | El `alt` de esta imagen en otros idiomas. Local a la imagen que describe — nunca un espejo posicional de la lista de imágenes. Exige el `textLanguage` del documento, como cualquier otro mapa de traducciones. | `{"en":{"alt":"Poster: Ferris on a purple background, “Rust Madrid · June 16 · Impact Hub”"}}` |
| `image[].translations.*.alt` | string | **obligatorio** dentro de `image[].translations.*` | | Lo que la imagen muestra, en este idioma. | `"Poster: Ferris on a purple background, “Rust Madrid · June 16 · Impact Hub”"` |
| `organizers` | object[] | _recomendado_ | el `organizers` del feed | Quién organiza el evento — no de dónde salieron los datos (eso es `source`). Es una lista: la co-organización es lo normal, no la excepción. Declararla REEMPLAZA la heredada, no se suma a ella. | `[{"name":"PyAlmería","url":"https://pyalmeria.example"}]`<br>`[{"name":"GDG Madrid","url":"https://gdgmadrid.example"},{"type":"person","name":"Ada Lovelace","url":"https://ada.example"}]` |
| `organizers[].name` | string | **obligatorio** dentro de `organizers[]` | | Nombre de quien organiza. | `"PyAlmería"`<br>`"Ada Lovelace"` |
| `organizers[].url` | string (uri) | opcional | | Dónde vive en la web quien organiza: su propia página, o su perfil en la plataforma desde la que publica. | `"https://pyalmeria.example"`<br>`"https://www.meetup.com/pyalmeria/"` |
| `organizers[].email` | string (email) | opcional | | Dirección de contacto para preguntas sobre el evento. Una dirección DE ROL (`info@`, `hola@`), no el buzón personal de nadie: un feed es abierto y rastreable, y lo que entra en él ya no se puede despublicar. Opcional y deliberadamente NO recomendado. Existe porque sin él no hay `ORGANIZER` de iCal válido que emitir (un `CAL-ADDRESS` es en la práctica un `mailto:`) ni `<author>` de RSS 2.0, que exige email. Se escribe pelado, sin el prefijo `mailto:` — lo añade quien exporta. Nunca se rellena a partir de una fuente que no esté publicada públicamente. | `"hola@pyalmeria.example"`<br>`"info@gdgmadrid.example"` |
| `organizers[].type` | enum: organization \| person | opcional | `"organization"` | Organización o persona. Al traducir hay que elegir un `@type` de schema.org sí o sí, y `Organization` es la opción tolerante. | `"organization"`<br>`"person"` |
| `startDate` | string | **obligatorio** | | Inicio en hora de reloj de pared: una fecha (`2026-10-15`) para eventos de todo el día, o una fecha-hora local (`2026-10-15T09:00`), nunca con segundos. Nunca lleva offset UTC: eso lo aporta `timezone`. Cuál de las dos formas usas no lo decide este campo solo: tiene que coincidir con la de `endDate`, y `endDate` (si existe) no puede ser anterior — ver las restricciones del documento. | `"2026-06-11T18:30"`<br>`"2026-10-15"` |
| `endDate` | string | _recomendado_ | | Fin en hora de reloj de pared, en la MISMA forma que `startDate` (ambas fechas, o ambas fecha-hora) y nunca anterior a él. Si falta, se asume que el evento termina el día que empieza. Para un evento de todo el día (forma fecha, sin hora), `endDate` es INCLUSIVO — nombra el último día en que ocurre el evento, no el día siguiente. Convertir a iCalendar exige sumar 1 día para `DTEND;VALUE=DATE` (RFC 5545 lo define como el final no inclusivo); importar exige restar ese día. Ambas reglas son del documento, no de este campo — ver las restricciones del documento. | `"2026-06-11T20:00"`<br>`"2026-10-16"` |
| `timezone` | enum: Africa/Abidjan \| Africa/Accra \| Africa/Addis_Ababa \| Africa/Algiers \| Africa/Asmara \| Africa/Asmera \| Africa/Bamako \| Africa/Bangui \| Africa/Banjul \| Africa/Bissau \| Africa/Blantyre \| Africa/Brazzaville \| Africa/Bujumbura \| Africa/Cairo \| Africa/Casablanca \| Africa/Ceuta \| Africa/Conakry \| Africa/Dakar \| Africa/Dar_es_Salaam \| Africa/Djibouti \| Africa/Douala \| Africa/El_Aaiun \| Africa/Freetown \| Africa/Gaborone \| Africa/Harare \| Africa/Johannesburg \| Africa/Juba \| Africa/Kampala \| Africa/Khartoum \| Africa/Kigali \| Africa/Kinshasa \| Africa/Lagos \| Africa/Libreville \| Africa/Lome \| Africa/Luanda \| Africa/Lubumbashi \| Africa/Lusaka \| Africa/Malabo \| Africa/Maputo \| Africa/Maseru \| Africa/Mbabane \| Africa/Mogadishu \| Africa/Monrovia \| Africa/Nairobi \| Africa/Ndjamena \| Africa/Niamey \| Africa/Nouakchott \| Africa/Ouagadougou \| Africa/Porto-Novo \| Africa/Sao_Tome \| Africa/Timbuktu \| Africa/Tripoli \| Africa/Tunis \| Africa/Windhoek \| America/Adak \| America/Anchorage \| America/Anguilla \| America/Antigua \| America/Araguaina \| America/Argentina/Buenos_Aires \| America/Argentina/Catamarca \| America/Argentina/ComodRivadavia \| America/Argentina/Cordoba \| America/Argentina/Jujuy \| America/Argentina/La_Rioja \| America/Argentina/Mendoza \| America/Argentina/Rio_Gallegos \| America/Argentina/Salta \| America/Argentina/San_Juan \| America/Argentina/San_Luis \| America/Argentina/Tucuman \| America/Argentina/Ushuaia \| America/Aruba \| America/Asuncion \| America/Atikokan \| America/Atka \| America/Bahia \| America/Bahia_Banderas \| America/Barbados \| America/Belem \| America/Belize \| America/Blanc-Sablon \| America/Boa_Vista \| America/Bogota \| America/Boise \| America/Buenos_Aires \| America/Cambridge_Bay \| America/Campo_Grande \| America/Cancun \| America/Caracas \| America/Catamarca \| America/Cayenne \| America/Cayman \| America/Chicago \| America/Chihuahua \| America/Ciudad_Juarez \| America/Coral_Harbour \| America/Cordoba \| America/Costa_Rica \| America/Coyhaique \| America/Creston \| America/Cuiaba \| America/Curacao \| America/Danmarkshavn \| America/Dawson \| America/Dawson_Creek \| America/Denver \| America/Detroit \| America/Dominica \| America/Edmonton \| America/Eirunepe \| America/El_Salvador \| America/Ensenada \| America/Fort_Nelson \| America/Fort_Wayne \| America/Fortaleza \| America/Glace_Bay \| America/Godthab \| America/Goose_Bay \| America/Grand_Turk \| America/Grenada \| America/Guadeloupe \| America/Guatemala \| America/Guayaquil \| America/Guyana \| America/Halifax \| America/Havana \| America/Hermosillo \| America/Indiana/Indianapolis \| America/Indiana/Knox \| America/Indiana/Marengo \| America/Indiana/Petersburg \| America/Indiana/Tell_City \| America/Indiana/Vevay \| America/Indiana/Vincennes \| America/Indiana/Winamac \| America/Indianapolis \| America/Inuvik \| America/Iqaluit \| America/Jamaica \| America/Jujuy \| America/Juneau \| America/Kentucky/Louisville \| America/Kentucky/Monticello \| America/Knox_IN \| America/Kralendijk \| America/La_Paz \| America/Lima \| America/Los_Angeles \| America/Louisville \| America/Lower_Princes \| America/Maceio \| America/Managua \| America/Manaus \| America/Marigot \| America/Martinique \| America/Matamoros \| America/Mazatlan \| America/Mendoza \| America/Menominee \| America/Merida \| America/Metlakatla \| America/Mexico_City \| America/Miquelon \| America/Moncton \| America/Monterrey \| America/Montevideo \| America/Montreal \| America/Montserrat \| America/Nassau \| America/New_York \| America/Nipigon \| America/Nome \| America/Noronha \| America/North_Dakota/Beulah \| America/North_Dakota/Center \| America/North_Dakota/New_Salem \| America/Nuuk \| America/Ojinaga \| America/Panama \| America/Pangnirtung \| America/Paramaribo \| America/Phoenix \| America/Port_of_Spain \| America/Port-au-Prince \| America/Porto_Acre \| America/Porto_Velho \| America/Puerto_Rico \| America/Punta_Arenas \| America/Rainy_River \| America/Rankin_Inlet \| America/Recife \| America/Regina \| America/Resolute \| America/Rio_Branco \| America/Rosario \| America/Santa_Isabel \| America/Santarem \| America/Santiago \| America/Santo_Domingo \| America/Sao_Paulo \| America/Scoresbysund \| America/Shiprock \| America/Sitka \| America/St_Barthelemy \| America/St_Johns \| America/St_Kitts \| America/St_Lucia \| America/St_Thomas \| America/St_Vincent \| America/Swift_Current \| America/Tegucigalpa \| America/Thule \| America/Thunder_Bay \| America/Tijuana \| America/Toronto \| America/Tortola \| America/Vancouver \| America/Virgin \| America/Whitehorse \| America/Winnipeg \| America/Yakutat \| America/Yellowknife \| Antarctica/Casey \| Antarctica/Davis \| Antarctica/DumontDUrville \| Antarctica/Macquarie \| Antarctica/Mawson \| Antarctica/McMurdo \| Antarctica/Palmer \| Antarctica/Rothera \| Antarctica/South_Pole \| Antarctica/Syowa \| Antarctica/Troll \| Antarctica/Vostok \| Arctic/Longyearbyen \| Asia/Aden \| Asia/Almaty \| Asia/Amman \| Asia/Anadyr \| Asia/Aqtau \| Asia/Aqtobe \| Asia/Ashgabat \| Asia/Ashkhabad \| Asia/Atyrau \| Asia/Baghdad \| Asia/Bahrain \| Asia/Baku \| Asia/Bangkok \| Asia/Barnaul \| Asia/Beirut \| Asia/Bishkek \| Asia/Brunei \| Asia/Calcutta \| Asia/Chita \| Asia/Choibalsan \| Asia/Chongqing \| Asia/Chungking \| Asia/Colombo \| Asia/Dacca \| Asia/Damascus \| Asia/Dhaka \| Asia/Dili \| Asia/Dubai \| Asia/Dushanbe \| Asia/Famagusta \| Asia/Gaza \| Asia/Harbin \| Asia/Hebron \| Asia/Ho_Chi_Minh \| Asia/Hong_Kong \| Asia/Hovd \| Asia/Irkutsk \| Asia/Istanbul \| Asia/Jakarta \| Asia/Jayapura \| Asia/Jerusalem \| Asia/Kabul \| Asia/Kamchatka \| Asia/Karachi \| Asia/Kashgar \| Asia/Kathmandu \| Asia/Katmandu \| Asia/Khandyga \| Asia/Kolkata \| Asia/Krasnoyarsk \| Asia/Kuala_Lumpur \| Asia/Kuching \| Asia/Kuwait \| Asia/Macao \| Asia/Macau \| Asia/Magadan \| Asia/Makassar \| Asia/Manila \| Asia/Muscat \| Asia/Nicosia \| Asia/Novokuznetsk \| Asia/Novosibirsk \| Asia/Omsk \| Asia/Oral \| Asia/Phnom_Penh \| Asia/Pontianak \| Asia/Pyongyang \| Asia/Qatar \| Asia/Qostanay \| Asia/Qyzylorda \| Asia/Rangoon \| Asia/Riyadh \| Asia/Saigon \| Asia/Sakhalin \| Asia/Samarkand \| Asia/Seoul \| Asia/Shanghai \| Asia/Singapore \| Asia/Srednekolymsk \| Asia/Taipei \| Asia/Tashkent \| Asia/Tbilisi \| Asia/Tehran \| Asia/Tel_Aviv \| Asia/Thimbu \| Asia/Thimphu \| Asia/Tokyo \| Asia/Tomsk \| Asia/Ujung_Pandang \| Asia/Ulaanbaatar \| Asia/Ulan_Bator \| Asia/Urumqi \| Asia/Ust-Nera \| Asia/Vientiane \| Asia/Vladivostok \| Asia/Yakutsk \| Asia/Yangon \| Asia/Yekaterinburg \| Asia/Yerevan \| Atlantic/Azores \| Atlantic/Bermuda \| Atlantic/Canary \| Atlantic/Cape_Verde \| Atlantic/Faeroe \| Atlantic/Faroe \| Atlantic/Jan_Mayen \| Atlantic/Madeira \| Atlantic/Reykjavik \| Atlantic/South_Georgia \| Atlantic/St_Helena \| Atlantic/Stanley \| Australia/ACT \| Australia/Adelaide \| Australia/Brisbane \| Australia/Broken_Hill \| Australia/Canberra \| Australia/Currie \| Australia/Darwin \| Australia/Eucla \| Australia/Hobart \| Australia/LHI \| Australia/Lindeman \| Australia/Lord_Howe \| Australia/Melbourne \| Australia/North \| Australia/NSW \| Australia/Perth \| Australia/Queensland \| Australia/South \| Australia/Sydney \| Australia/Tasmania \| Australia/Victoria \| Australia/West \| Australia/Yancowinna \| Brazil/Acre \| Brazil/DeNoronha \| Brazil/East \| Brazil/West \| Canada/Atlantic \| Canada/Central \| Canada/Eastern \| Canada/Mountain \| Canada/Newfoundland \| Canada/Pacific \| Canada/Saskatchewan \| Canada/Yukon \| CET \| Chile/Continental \| Chile/EasterIsland \| CST6CDT \| Cuba \| EET \| Egypt \| Eire \| EST \| EST5EDT \| Etc/GMT \| Etc/GMT-0 \| Etc/GMT-1 \| Etc/GMT-10 \| Etc/GMT-11 \| Etc/GMT-12 \| Etc/GMT-13 \| Etc/GMT-14 \| Etc/GMT-2 \| Etc/GMT-3 \| Etc/GMT-4 \| Etc/GMT-5 \| Etc/GMT-6 \| Etc/GMT-7 \| Etc/GMT-8 \| Etc/GMT-9 \| Etc/GMT+0 \| Etc/GMT+1 \| Etc/GMT+10 \| Etc/GMT+11 \| Etc/GMT+12 \| Etc/GMT+2 \| Etc/GMT+3 \| Etc/GMT+4 \| Etc/GMT+5 \| Etc/GMT+6 \| Etc/GMT+7 \| Etc/GMT+8 \| Etc/GMT+9 \| Etc/GMT0 \| Etc/Greenwich \| Etc/UCT \| Etc/Universal \| Etc/UTC \| Etc/Zulu \| Europe/Amsterdam \| Europe/Andorra \| Europe/Astrakhan \| Europe/Athens \| Europe/Belfast \| Europe/Belgrade \| Europe/Berlin \| Europe/Bratislava \| Europe/Brussels \| Europe/Bucharest \| Europe/Budapest \| Europe/Busingen \| Europe/Chisinau \| Europe/Copenhagen \| Europe/Dublin \| Europe/Gibraltar \| Europe/Guernsey \| Europe/Helsinki \| Europe/Isle_of_Man \| Europe/Istanbul \| Europe/Jersey \| Europe/Kaliningrad \| Europe/Kiev \| Europe/Kirov \| Europe/Kyiv \| Europe/Lisbon \| Europe/Ljubljana \| Europe/London \| Europe/Luxembourg \| Europe/Madrid \| Europe/Malta \| Europe/Mariehamn \| Europe/Minsk \| Europe/Monaco \| Europe/Moscow \| Europe/Nicosia \| Europe/Oslo \| Europe/Paris \| Europe/Podgorica \| Europe/Prague \| Europe/Riga \| Europe/Rome \| Europe/Samara \| Europe/San_Marino \| Europe/Sarajevo \| Europe/Saratov \| Europe/Simferopol \| Europe/Skopje \| Europe/Sofia \| Europe/Stockholm \| Europe/Tallinn \| Europe/Tirane \| Europe/Tiraspol \| Europe/Ulyanovsk \| Europe/Uzhgorod \| Europe/Vaduz \| Europe/Vatican \| Europe/Vienna \| Europe/Vilnius \| Europe/Volgograd \| Europe/Warsaw \| Europe/Zagreb \| Europe/Zaporozhye \| Europe/Zurich \| GB \| GB-Eire \| GMT \| GMT-0 \| GMT+0 \| GMT0 \| Greenwich \| Hongkong \| HST \| Iceland \| Indian/Antananarivo \| Indian/Chagos \| Indian/Christmas \| Indian/Cocos \| Indian/Comoro \| Indian/Kerguelen \| Indian/Mahe \| Indian/Maldives \| Indian/Mauritius \| Indian/Mayotte \| Indian/Reunion \| Iran \| Israel \| Jamaica \| Japan \| Kwajalein \| Libya \| MET \| Mexico/BajaNorte \| Mexico/BajaSur \| Mexico/General \| MST \| MST7MDT \| Navajo \| NZ \| NZ-CHAT \| Pacific/Apia \| Pacific/Auckland \| Pacific/Bougainville \| Pacific/Chatham \| Pacific/Chuuk \| Pacific/Easter \| Pacific/Efate \| Pacific/Enderbury \| Pacific/Fakaofo \| Pacific/Fiji \| Pacific/Funafuti \| Pacific/Galapagos \| Pacific/Gambier \| Pacific/Guadalcanal \| Pacific/Guam \| Pacific/Honolulu \| Pacific/Johnston \| Pacific/Kanton \| Pacific/Kiritimati \| Pacific/Kosrae \| Pacific/Kwajalein \| Pacific/Majuro \| Pacific/Marquesas \| Pacific/Midway \| Pacific/Nauru \| Pacific/Niue \| Pacific/Norfolk \| Pacific/Noumea \| Pacific/Pago_Pago \| Pacific/Palau \| Pacific/Pitcairn \| Pacific/Pohnpei \| Pacific/Ponape \| Pacific/Port_Moresby \| Pacific/Rarotonga \| Pacific/Saipan \| Pacific/Samoa \| Pacific/Tahiti \| Pacific/Tarawa \| Pacific/Tongatapu \| Pacific/Truk \| Pacific/Wake \| Pacific/Wallis \| Pacific/Yap \| Poland \| Portugal \| PRC \| PST8PDT \| ROC \| ROK \| Singapore \| Turkey \| UCT \| Universal \| US/Alaska \| US/Aleutian \| US/Arizona \| US/Central \| US/East-Indiana \| US/Eastern \| US/Hawaii \| US/Indiana-Starke \| US/Michigan \| US/Mountain \| US/Pacific \| US/Samoa \| UTC \| W-SU \| WET \| Zulu | **obligatorio** | | Una zona horaria IANA real (p. ej. `Europe/Madrid`) — nombre canónico o alias histórico, nunca una inventada o mal escrita. Convierte un `startDate` de reloj de pared en un instante inequívoco. En eventos de todo el día contextualiza la fecha: no la desplaza. Las dos noches al año en que una hora local es ambigua (se repite) o imposible (se salta) por un cambio de horario, se resuelve igual que RFC 5545 §3.3.5: una hora repetida es su PRIMERA ocurrencia; una hora que no existe se interpreta con el offset UTC vigente ANTES del cambio. | `"Europe/Madrid"`<br>`"America/Bogota"`<br>`"UTC"` |
| `attendanceMode` | enum: in-person \| online \| hybrid | _recomendado_ | | Qué dice quien organiza que es este evento. Su ausencia nunca significa presencial. | `"in-person"`<br>`"online"`<br>`"hybrid"` |
| `location` | object | _recomendado_ | | Qué se SABE de dónde ocurre el evento. Pregunta distinta de `attendanceMode`, que declara la intención de quien organiza. | `{"venue":"El Cable, Almería"}`<br>`{"onlineUrl":"https://meet.example/pyalmeria"}`<br>`{"venue":"Campus Madrid, Calle de Moreno Nieto 2, Madrid","address":{"street":"Calle de Moreno Nieto 2","locality":"Madrid","postalCode":"28005","country":"ES"},"onlineUrl":"https://meet.example/rust-madrid"}` |
| `location.venue` | string | _recomendado_ | | Lugar físico legible por personas, en una línea de texto libre: el nombre del sitio más la dirección que haga falta para llegar —cuánta, lo decides tú—. Su presencia significa que el evento tiene sede física. `address` no lo hace redundante, porque juntar sus partes nunca devuelve el nombre: un `PostalAddress` no tiene campo donde quepa «El Cable» ni «Campus Madrid», y el nombre es por lo que la gente se orienta. En schema.org es `Place.name`, hermano de `Place.address`. | `"El Cable, Almería"`<br>`"Campus Madrid, Calle de Moreno Nieto 2, Madrid"` |
| `location.address` | object | opcional | | Dirección postal de la sede física, por partes. COMPLEMENTA a `venue`, no lo sustituye: `venue` es la única cadena que todo formato sabe imprimir; `address` es lo que necesita un traductor para emitir un `PostalAddress` de schema.org — cuyos subcampos Google valida uno a uno para el rich result de `Event`. Todas las partes son opcionales; omite lo que no sepas. Una clave ausente significa desconocido; `""` o `null` publican un desconocido como si fuera dato, que es lo único peor que callarse. | `{"street":"Calle de Moreno Nieto 2","locality":"Madrid","postalCode":"28005","country":"ES"}`<br>`{"locality":"Almería","country":"ES"}` |
| `location.address.street` | string | opcional | | Calle y número, tal y como se escriben localmente. Puede llevar planta o puerta; es una línea de texto, no un sub-objeto. | `"Calle de Moreno Nieto 2"`<br>`"100 West Snickerpark Dr"` |
| `location.address.locality` | string | opcional | | Ciudad, pueblo o localidad. | `"Madrid"`<br>`"Almería"` |
| `location.address.region` | string | opcional | | Provincia, estado o comunidad autónoma — el nivel que en ese país queda entre localidad y país. Texto libre o código ISO 3166-2; ambos viajan sin cambios a `addressRegion` de schema.org. | `"Comunidad de Madrid"`<br>`"PA"` |
| `location.address.postalCode` | string | opcional | | Código postal, tal y como lo escribe el correo local. Cadena, nunca número: los ceros a la izquierda forman parte de él. | `"28005"`<br>`"19019"` |
| `location.address.country` | enum: AD \| AE \| AF \| AG \| AI \| AL \| AM \| AO \| AQ \| AR \| AS \| AT \| AU \| AW \| AX \| AZ \| BA \| BB \| BD \| BE \| BF \| BG \| BH \| BI \| BJ \| BL \| BM \| BN \| BO \| BQ \| BR \| BS \| BT \| BV \| BW \| BY \| BZ \| CA \| CC \| CD \| CF \| CG \| CH \| CI \| CK \| CL \| CM \| CN \| CO \| CR \| CU \| CV \| CW \| CX \| CY \| CZ \| DE \| DJ \| DK \| DM \| DO \| DZ \| EC \| EE \| EG \| EH \| ER \| ES \| ET \| FI \| FJ \| FK \| FM \| FO \| FR \| GA \| GB \| GD \| GE \| GF \| GG \| GH \| GI \| GL \| GM \| GN \| GP \| GQ \| GR \| GS \| GT \| GU \| GW \| GY \| HK \| HM \| HN \| HR \| HT \| HU \| ID \| IE \| IL \| IM \| IN \| IO \| IQ \| IR \| IS \| IT \| JE \| JM \| JO \| JP \| KE \| KG \| KH \| KI \| KM \| KN \| KP \| KR \| KW \| KY \| KZ \| LA \| LB \| LC \| LI \| LK \| LR \| LS \| LT \| LU \| LV \| LY \| MA \| MC \| MD \| ME \| MF \| MG \| MH \| MK \| ML \| MM \| MN \| MO \| MP \| MQ \| MR \| MS \| MT \| MU \| MV \| MW \| MX \| MY \| MZ \| NA \| NC \| NE \| NF \| NG \| NI \| NL \| NO \| NP \| NR \| NU \| NZ \| OM \| PA \| PE \| PF \| PG \| PH \| PK \| PL \| PM \| PN \| PR \| PS \| PT \| PW \| PY \| QA \| RE \| RO \| RS \| RU \| RW \| SA \| SB \| SC \| SD \| SE \| SG \| SH \| SI \| SJ \| SK \| SL \| SM \| SN \| SO \| SR \| SS \| ST \| SV \| SX \| SY \| SZ \| TC \| TD \| TF \| TG \| TH \| TJ \| TK \| TL \| TM \| TN \| TO \| TR \| TT \| TV \| TW \| TZ \| UA \| UG \| UM \| US \| UY \| UZ \| VA \| VC \| VE \| VG \| VI \| VN \| VU \| WF \| WS \| YE \| YT \| ZA \| ZM \| ZW | opcional | | Un código ISO 3166-1 alfa-2 real y vigente (`ES`, `US`, `MX`), nunca uno inventado, reservado o retirado. Un código y no el nombre del país, porque el nombre tiene una grafía por idioma: «España», «Spain» y «Espagne» son el mismo país, y un consumidor que agrupe eventos por país vería tres. Convertir un nombre en código es consultar una tabla, no inventar — por eso la spec lo pide aquí y en ningún otro sitio. Error frecuente: Reino Unido es `GB`, no `UK` — «UK» no es un código ISO 3166-1. | `"ES"`<br>`"US"` |
| `location.onlineUrl` | string (uri) | _recomendado_ | | URL para asistir en remoto. Su presencia significa que el evento tiene acceso online. | `"https://meet.example/pyalmeria"` |
| `location.geo` | object | opcional | | Coordenadas de la sede física (grados decimales WGS-84). Independiente de `venue`, que es texto libre: un punto, no un nombre. Mapea a `GEO` de iCal y a `Place.geo` (GeoCoordinates) de schema.org. | — |
| `location.geo.lat` | number | **obligatorio** dentro de `location.geo` | | Latitud en grados decimales. | `40.4168` |
| `location.geo.lon` | number | **obligatorio** dentro de `location.geo` | | Longitud en grados decimales. | `-3.7038` |
| `eligibility` | object | opcional | | Quién puede asistir, cuando la respuesta no es «cualquiera». La tercera parte de «¿puedo ir?», después de `attendanceMode` y `location`: esos dos dicen si el evento está a tu alcance, este si te dejan entrar. Su ausencia nunca significa abierto — quien importa un `.ics` no puede saberlo, y callarse no es la misma afirmación que decir que la puerta está abierta. | `{"type":"open"}`<br>`{"type":"members-only","note":"Miembros del Discord de Rust Girona","url":"https://rustgirona.example/join"}`<br>`{"type":"restricted","note":"Solo alumnado de la Universidad de Almería"}` |
| `eligibility.type` | enum: open \| members-only \| approval-required \| restricted | **obligatorio** dentro de `eligibility` | | Qué clase de puerta. `open`: puede asistir cualquiera — incluido un evento con entrada de pago o con las plazas agotadas, porque un precio y un aforo no son condiciones sobre QUIÉN eres. `members-only`: hay que pertenecer a algo antes. `approval-required`: te apuntas y quien organiza DECIDE — el «request to approve» de Luma, un grupo de Meetup con pregunta de admisión, un taller que selecciona a quien asiste. Va de un juicio sobre la persona, nunca de aforo: por orden de llegada con plazas limitadas es `open`, y que se agoten es `offers[].availability`. `restricted`: HAY una condición y ninguno de los otros valores la nombra — di cuál en `note`, que es por lo que el schema la exige ahí. Cuatro valores, y cortos a propósito: un consumidor que tiene que tratar veinte puertas no trata ninguna. `invite-only` NO es uno de ellos, a propósito: ver la prosa de la spec. | `"open"`<br>`"members-only"`<br>`"approval-required"` |
| `eligibility.note` | string | _recomendado_ | | La condición en palabras, para que la lea una persona: qué comunidad, qué universidad, qué empresa. OBLIGATORIA cuando `type` es `restricted`, porque «restricted» a secas no le dice nada a nadie; vale la pena escribirla siempre que el valor del enum por sí solo deje una duda. Es la parte que sobrevive a la exportación a cualquier formato, dentro del texto. | `"Miembros del Discord de Rust Girona"`<br>`"Solo alumnado de la Universidad de Almería"` |
| `eligibility.url` | string (uri) | opcional | | Dónde se explica o se cumple la condición: la página para unirse a la comunidad, pedir invitación o solicitar plaza. Distinta de `offers[].url`, que es donde cambia de manos una plaza o un pago — aquí no se compra nada, se abre una puerta. | `"https://rustgirona.example/join"` |
| `eligibility.translations` | object | opcional | | La `note` en otros idiomas. `type` no necesita ninguna: un enum no lleva idioma, y quien consume lo renderiza en el de quien lee. | `{"es":{"note":"Miembros del Discord de Rust Girona"}}` |
| `eligibility.translations.*.note` | string | **obligatorio** dentro de `eligibility.translations.*` | | La condición, en este idioma. | `"Miembros del Discord de Rust Girona"` |
| `tags` | string[] | _recomendado_ | | Etiquetas temáticas de forma libre — DE QUÉ va el evento. Mapea a `CATEGORIES` de iCal y a `keywords` de schema.org. No quién puede entrar: esa pregunta tiene su propio campo, `eligibility`, porque una etiqueta como «solo-socios» es invisible para un consumidor que no sepa ya que tiene que buscarla. Más adelante podría superponerse un vocabulario controlado; el campo en sí sigue siendo libre. | `["rust","wasm"]`<br>`["python","async"]` |
| `languages` | string[] | _recomendado_ | | Idiomas que se HABLAN en el evento, como etiquetas BCP 47, p. ej. `["es","en"]`. No el idioma en que está escrito este documento — eso es `textLanguage`, y los dos no coinciden a menudo: una sesión bilingüe descrita solo en catalán. | `["es"]`<br>`["es","en"]` |
| `textLanguage` | string (ote-language-tag) | opcional | el `textLanguage` del feed | Idioma en que está escrito el texto libre de ESTE DOCUMENTO — `name`, `description` y cualquier otra prosa que lleve. Una sola etiqueta BCP 47, no una lista: un texto está escrito en un idioma. Es una pregunta distinta de `languages`, que dice qué se habla en el evento. Ausente, dentro de un feed, hereda el `textLanguage` del feed; en un documento suelto, sin feed del que heredar, ausente significa desconocido, nunca inglés. | `"es"`<br>`"ca"`<br>`"en"` |
| `offers` | object[] | opcional | | Cuánto cuesta asistir y dónde registrarse. Es una lista: cada tipo de entrada (early bird, estudiantes, patrocinio) es una entrada, y un evento gratuito es una sola entrada con `price` 0. Ausente significa DESCONOCIDO, nunca gratis — decir «gratis» es lo que hace `price: 0`. | `[{"price":0,"url":"https://rustmadrid.example/meetups/2026-06#registro"}]`<br>`[{"name":"Early bird","price":35,"currency":"EUR","url":"https://devfest-levante.example/2026/entradas","availability":"sold-out","closesAt":"2026-07-31T23:59:59+02:00"},{"name":"General","price":45,"currency":"EUR","url":"https://devfest-levante.example/2026/entradas","availability":"in-stock"}]` |
| `offers[].name` | string | _recomendado_ | | Cómo se llama esta entrada («General admission», «Estudiantes»). Merece la pena escribirlo cuando hay más de una oferta; es ruido cuando solo hay una. | `"General admission"`<br>`"Estudiantes"` |
| `offers[].price` | number | opcional | | Importe por asistente, en `currency`. 0 significa gratis — y es la ÚNICA forma de decirlo: una lista `offers` ausente significa que el precio se desconoce. Es un número, nunca texto: sin símbolo de moneda, sin separador de miles, sin rangos ni «desde», porque la razón de publicar un precio como dato es que alguien pueda filtrar y comparar con él. Un precio que no se puede escribir con un número son varias ofertas. | `0`<br>`45`<br>`12.5` |
| `offers[].currency` | enum: AED \| AFN \| ALL \| AMD \| AOA \| ARS \| AUD \| AWG \| AZN \| BAM \| BBD \| BDT \| BHD \| BIF \| BMD \| BND \| BOB \| BOV \| BRL \| BSD \| BTN \| BWP \| BYN \| BZD \| CAD \| CDF \| CHE \| CHF \| CHW \| CLF \| CLP \| CNY \| COP \| COU \| CRC \| CUP \| CVE \| CZK \| DJF \| DKK \| DOP \| DZD \| EGP \| ERN \| ETB \| EUR \| FJD \| FKP \| GBP \| GEL \| GHS \| GIP \| GMD \| GNF \| GTQ \| GYD \| HKD \| HNL \| HTG \| HUF \| IDR \| ILS \| INR \| IQD \| IRR \| ISK \| JMD \| JOD \| JPY \| KES \| KGS \| KHR \| KMF \| KPW \| KRW \| KWD \| KYD \| KZT \| LAK \| LBP \| LKR \| LRD \| LSL \| LYD \| MAD \| MDL \| MGA \| MKD \| MMK \| MNT \| MOP \| MRU \| MUR \| MVR \| MWK \| MXN \| MXV \| MYR \| MZN \| NAD \| NGN \| NIO \| NOK \| NPR \| NZD \| OMR \| PAB \| PEN \| PGK \| PHP \| PKR \| PLN \| PYG \| QAR \| RON \| RSD \| RUB \| RWF \| SAR \| SBD \| SCR \| SDG \| SEK \| SGD \| SHP \| SLE \| SOS \| SRD \| SSP \| STN \| SVC \| SYP \| SZL \| THB \| TJS \| TMT \| TND \| TOP \| TRY \| TTD \| TWD \| TZS \| UAH \| UGX \| USD \| USN \| UYI \| UYU \| UYW \| UZS \| VED \| VES \| VND \| VUV \| WST \| XAD \| XAF \| XAG \| XAU \| XBA \| XBB \| XBC \| XBD \| XCD \| XCG \| XDR \| XOF \| XPD \| XPF \| XPT \| XSU \| XTS \| XUA \| XXX \| YER \| ZAR \| ZMW \| ZWG | opcional | | Un código ISO 4217 alfa-3 real (`EUR`, `USD`, `MXN`), nunca uno inventado. Solo tiene sentido junto a `price` —nombra en qué está denominado, nada más—, así que exige que `price` esté presente, sea cual sea su valor. Obligatorio siempre que `price` sea mayor que 0, e innecesario cuando es 0: lo gratis es gratis en cualquier moneda, y emitirla ahí es como Luma acaba publicando una divisa para un meetup que no cuesta nada. | `"EUR"`<br>`"USD"` |
| `offers[].url` | string (uri) | opcional | | Dónde se compra la entrada o se hace el registro de ESTA oferta. Distinta de la `url` del evento: esa página lo describe, esta es donde cambia de manos el dinero o la plaza. Se omite cuando el registro ocurre en la propia página del evento. | `"https://devfest-levante.example/2026/entradas"` |
| `offers[].availability` | enum: in-stock \| sold-out | opcional | | Si esta oferta se puede coger todavía. Su ausencia nunca significa disponible — un feed desactualizado que sigue afirmando `in-stock` es peor que uno que no dice nada. Solo se modelan los dos estados sobre los que quien asiste puede actuar. | `"in-stock"`<br>`"sold-out"` |
| `offers[].waitlistUrl` | string (uri) | opcional | | Dónde apuntarse a la cola de esta oferta una vez agotada. Existe para que «agotado y nada que hacer» y «agotado, pero puedes hacer cola» dejen de ser el mismo documento — es la tercera cosa sobre la que quien asiste puede actuar, y la razón de que sea una URL y no un tercer valor de `availability`: así todo consumidor que ya existe sigue leyendo `sold-out`, que es VERDAD, en vez de encontrarse un valor de enum que no sabe interpretar. Distinta de `url`, donde se compra la entrada: en una cola no se compra nada. | `"https://devfest-levante.example/2026/lista-espera"` |
| `offers[].opensAt` | string (date-time) | opcional | | Cuándo sale a la venta esta oferta. Es un INSTANTE, con offset o `Z`, a diferencia de las fechas del evento, que son de reloj de pared: una venta que se abre es el momento en que un botón empieza a funcionar, no una hora en un cartel. | `"2026-05-01T10:00:00+02:00"` |
| `offers[].closesAt` | string (date-time) | opcional | | Cuándo deja de estar disponible esta oferta. Es un INSTANTE, con offset o `Z`, por lo mismo que `opensAt` — y porque un «23:59» sin offset es el bug clásico de las fechas límite. | `"2026-07-31T23:59:59+02:00"` |
| `offers[].translations` | object | opcional | | El `name` de esta oferta en otros idiomas. Local a la oferta a la que pertenece — nunca un espejo posicional de la lista de ofertas. Exige el `textLanguage` del documento, como cualquier otro mapa de traducciones. | `{"en":{"name":"Students"}}` |
| `offers[].translations.*.name` | string | **obligatorio** dentro de `offers[].translations.*` | | El nombre de esta entrada, en este idioma. | `"Students"`<br>`"Estudiantes"` |
| `cfp` | object | opcional | | La convocatoria abierta de propuestas del evento — charlas, talleres, papers. Es el único campo de la spec sin equivalente en NINGUNO de los tres formatos de destino: existe porque «qué conferencias están aceptando propuestas ahora mismo» es una pregunta que solo puede contestar quien publica, y hoy se contesta scrapeando. | `{"url":"https://devfest-levante.example/2026/cfp","closesAt":"2026-07-15T23:59:59+02:00"}`<br>`{"url":"https://devfest-levante.example/2026/cfp","opensAt":"2026-05-01T00:00:00+02:00","closesAt":"2026-07-15T23:59:59+02:00","coversTravel":true,"coversAccommodation":true}` |
| `cfp.url` | string (uri) | **obligatorio** dentro de `cfp` | | Dónde se envían las propuestas: el formulario, o la página que describe la convocatoria. Obligatorio: un CFP que nadie puede encontrar no es una convocatoria, y es la única parte que sobrevive a la exportación a cualquier formato, dentro del texto. | `"https://devfest-levante.example/2026/cfp"` |
| `cfp.opensAt` | string (date-time) | opcional | | Cuándo empieza a aceptar propuestas. Es un INSTANTE, con offset o `Z`. Ausente significa que ya está abierta: una convocatoria que aún no ha abierto está anunciada, no publicada. | `"2026-05-01T00:00:00+02:00"` |
| `cfp.closesAt` | string (date-time) | _recomendado_ | | Fecha límite para enviar propuestas. Es un INSTANTE, con offset o `Z`, nunca un «23:59» pelado: qué medianoche es exactamente la pregunta, y «anywhere on Earth» es una respuesta real (`-12:00`) que un campo de reloj de pared no podría expresar. Ausente significa desconocido, no «abierto para siempre» — y es lo que un consumidor necesita para responder «qué CFPs están abiertos ahora». | `"2026-07-15T23:59:59+02:00"`<br>`"2026-07-15T23:59:59-12:00"` |
| `cfp.coversTravel` | boolean | opcional | | Si el evento cubre el viaje de quien sea seleccionado. Su ausencia nunca significa `false`. Está aquí, y «call for sponsors» no, porque esto es lo que filtra quien da charlas antes de decidir si se puede permitir enviar una propuesta. | `true` |
| `cfp.coversAccommodation` | boolean | opcional | | Si el evento cubre el alojamiento de quien sea seleccionado. Misma regla que `coversTravel`: ausente significa desconocido. | `true` |
| `status` | enum: scheduled \| tentative \| cancelled \| postponed \| rescheduled \| moved-online | opcional | `"scheduled"` | Qué le ha pasado al evento, no al dato. Un evento cancelado, pospuesto o movido a online DEBE seguir publicado: borrarlo deja un evento muerto en el calendario de quien se suscribió. `tentative` significa anunciado pero sin confirmar (el `STATUS:TENTATIVE` de iCal) — existe para que quien importa no tenga que ascender a `scheduled` un evento que nadie ha confirmado. | `"scheduled"`<br>`"cancelled"`<br>`"moved-online"` |
| `partOf` | object | opcional | | La serie o el evento multi-parte del que este documento es UNA ocurrencia. Es una REFERENCIA, nunca una regla de recurrencia: OTE no genera fechas — quien publica expande la recurrencia en un documento por ocurrencia, cada uno con su `id`, sus fechas y su `status`. Un consumidor que ignore este campo sigue viendo eventos completos y correctos. | `{"id":"https://rustmadrid.example/meetups","name":"Rust Madrid — meetup mensual","url":"https://rustmadrid.example/meetups"}`<br>`{"type":"multipart","id":"https://pyalmeria.example/study-jams/2026-testing","name":"Study Jam de testing en Python (3 sesiones)"}` |
| `partOf.id` | string (uri) | **obligatorio** dentro de `partOf` | | Identificador estable de la serie o del evento multi-parte. Mismas reglas que el `id` del evento: una URL HTTP(S) bajo un dominio que controla quien publica — no necesariamente uno propio, una página de plataforma (Meetup, GitHub Pages, LinkedIn) también sirve — acuñada una vez. NO tiene por qué resolver a un documento OTE — es lo que permite a un consumidor agrupar las ocurrencias. | `"https://rustmadrid.example/meetups"`<br>`"https://pyalmeria.example/study-jams/2026-testing"` |
| `partOf.name` | string | _recomendado_ | | Nombre de la serie o del evento multi-parte, para que un consumidor pueda agrupar sin resolver el `id`. | `"Rust Madrid — meetup mensual"`<br>`"Study Jam de testing en Python (3 sesiones)"` |
| `partOf.url` | string (uri) | opcional | | Página que describe la serie o el evento multi-parte en conjunto. | `"https://rustmadrid.example/meetups"` |
| `partOf.type` | enum: series \| multipart | opcional | `"series"` | `series`: ocurrencias independientes que comparten identidad (un meetup mensual). `multipart`: partes de UN SOLO evento celebrado en fechas no consecutivas (un study jam de tres sesiones en sábados no consecutivos, con una sola inscripción). `series` es la opción tolerante, y la elección cambia la traducción: una serie se convierte en `EventSeries` de schema.org; un evento multi-parte, en un `Event` cuyas partes son su `subEvent`. | `"series"`<br>`"multipart"` |
| `partOf.translations` | object | opcional | | El nombre visible de la serie en otros idiomas. Su `id` no se traduce: un identificador con dos grafías son dos series. | `{"es":{"name":"Sesión semanal de programación"}}` |
| `partOf.translations.*.name` | string | **obligatorio** dentro de `partOf.translations.*` | | El nombre de la serie o del evento multi-parte, en este idioma. | `"Sesión semanal de programación"` |
| `license` | string | **obligatorio** | el `license` del feed | Licencia de ESTOS DATOS, no del evento. Identificador SPDX (`CC0-1.0`, `CC-BY-4.0`…, lista completa en https://spdx.org/licenses/) o una URL. | `"CC-BY-4.0"`<br>`"CC0-1.0"` |
| `source` | object | opcional | | Procedencia. Obligatoria cuando el evento se importó o agregó de otro sitio; se omite cuando quien organiza describe su propio evento: es la fuente. | `{"name":"Rust Madrid","url":"https://calendar.example/ics/rust-madrid","license":"CC-BY-4.0","retrievedAt":"2026-06-01T05:00:00Z"}` |
| `source.name` | string | opcional | | Nombre de la fuente (p. ej. «Rust Madrid», «Meetup»), tal y como lo leería una persona. Escríbelo siempre que la fuente tenga nombre propio: quien muestre de dónde salió el dato puede sacar una etiqueta de `url` (su host), pero una etiqueta derivada es una suposición. | `"Rust Madrid"`<br>`"Meetup"` |
| `source.url` | string (uri) | opcional | | Enlace a la ficha original, para poder verificar y corregir el dato en origen. | `"https://calendar.example/ics/rust-madrid"` |
| `source.license` | string | opcional | | Licencia bajo la que la FUENTE publica el dato. Restringe lo que puede republicarse: declarar una licencia no concede derechos que la fuente nunca dio. | `"CC-BY-4.0"` |
| `source.retrievedAt` | string (date-time) | opcional | | Cuándo se obtuvo el dato. | `"2026-06-01T05:00:00Z"` |
| `updatedAt` | string (date-time) | _recomendado_ | | Instante en que los DATOS del evento cambiaron por última vez — equivalente a `LAST-MODIFIED` de iCal, no a `DTSTAMP` (que marca la generación y cambia en cada exportación). Permite a un consumidor sincronizar de forma incremental: traer solo lo que cambió desde su última lectura. Ausente significa desconocido, no «nunca cambió». | `"2026-06-10T18:00:00Z"` |
| `translations` | object | opcional | | El texto libre del mismo evento en otros idiomas, indexado por etiqueta BCP 47. El documento conserva UN texto principal en sus propios campos —el que declara `textLanguage`— y aquí van las versiones de ese texto. Aditivo a propósito: `name` y `description` siguen siendo cadenas, así que ningún consumidor existente se rompe y quien publica en un solo idioma no escribe nada. Nunca una traducción al idioma en que ya está el documento. Exige `textLanguage` — y lo exige también cualquier otro mapa de traducciones del documento, a cualquier profundidad; ver las restricciones del documento. | `{"es":{"name":"Sesión semanal de programación — Rust Girona","description":"Cada semana nos juntamos en línea para picar Rust un rato."}}` |
| `translations.*.name` | string | opcional | | El nombre del evento, en este idioma. | `"Sesión semanal de programación — Rust Girona"` |
| `translations.*.description` | string | opcional | | La descripción del evento, en este idioma. Texto plano o Markdown, como el campo que traduce. | `"Cada semana nos juntamos en línea para picar Rust un rato."` |

### Restricciones

Reglas que el schema impone sobre objetos completos y que el nivel de un campo suelto no puede expresar. También generadas de los schemas: el validador rechaza el documento que las incumple.

- **el documento** — endDate no puede ser anterior a startDate.
- **el documento** — Un mapa de traducciones no puede repetir el idioma propio de textLanguage, ni tener dos de sus propias claves para ese mismo idioma.
- **el documento** — partOf.id no puede ser igual al id propio del evento.
- **el documento** — startDate y endDate tienen que ser de la misma forma: dos fechas de día completo, o dos fechas-hora locales.
- **el documento** — Un mapa de traducciones es inservible si no se sabe en qué idioma está el texto principal: quien lo consume no puede saber qué entrada lo duplica ni a qué está cayendo por defecto. Así que CUALQUIER mapa de traducciones del documento —el del propio evento o uno dentro de image, offers, eligibility o partOf— exige textLanguage. Es el único sitio de esta spec donde un campo depende de que otro esté presente, y vale a cualquier profundidad porque el idioma principal es una propiedad del documento entero, no de cada objeto. Un documento suelto no tiene feed del que heredar, así que siempre debe llevar el suyo; dentro de un feed, la misma exigencia se aplica contra el idioma efectivo (propio o heredado) — ver feed.schema.json.
- **`image[]`** — Con `translations`, `alt` es obligatorio.
- **`location`** — Requiere al menos uno de: `venue`, `onlineUrl`.
- **`location.address`** — Debe llevar al menos una propiedad.
- **`eligibility`** — Cuando `type` es `"restricted"`, `note` es obligatorio. restricted significa «hay una puerta que el enum no sabe nombrar». Sin note no nombra nada, y quien lo consume solo puede mostrar la palabra: así es como un campo que existe para responder «¿puedo ir?» acaba preguntándolo.
- **`languages`** — languages no debe repetir la misma etiqueta de idioma escrita con distinta capitalización.
- **`offers[]`** — Requiere al menos uno de: `price`, `url`. Una oferta tiene que llevar un precio o un enlace —lo ideal es los dos—. Una que no lleva ninguno no dice nada que no dijera ya omitir la lista entera; es la misma regla que sigue location con venue y onlineUrl.
- **`offers[]`** — Con `currency`, `price` es obligatorio.
- **`offers[]`** — closesAt no puede ser anterior a opensAt.
- **`offers[]`** — Con `waitlistUrl`, `availability` no puede ser `"in-stock"`. Una lista de espera para algo que todavía puedes comprar no es una lista de espera: la cola solo tiene sentido cuando la oferta se ha agotado. La disponibilidad puede seguir estando AUSENTE: quien sabe que hay cola y no controla el estado de las entradas no debería verse obligado a afirmar que están agotadas para poder mencionarla. Solo se rechaza la combinación incoherente, nunca la incompleta.
- **`offers[]`** — Cuando `price` es mayor que 0, `currency` es obligatorio. Una cantidad distinta de cero sin moneda no es un precio: 45 es otra cosa en EUR, en USD y en MXN, y quien tenga que adivinarlo adivinará la suya.
- **`cfp`** — closesAt no puede ser anterior a opensAt.
- **`source`** — Requiere al menos uno de: `name`, `url`. La procedencia tiene que apuntar a algo: un nombre que lea una persona, una URL que siga una máquina, idealmente las dos. Cualquiera de ellas basta, y exigir el nombre sería peor que aceptar la URL: quien importa un `.ics` siempre conoce la dirección que descargó y a menudo no tiene nombre de publicador que leer (el X-WR-CALNAME de iCalendar es opcional), así que el requisito se cumpliría inventándolo. Una fuente inventada es peor que una fuente dada solo como enlace. Misma regla que offers con price y url, y que location con venue y onlineUrl.
- **`translations.*`** — Requiere al menos uno de: `name`, `description`. Una entrada de traducción solo es una traducción si traduce algo que OTE reconoce. Los campos de extensión pueden seguir conviviendo con name/description — esto solo prohíbe una entrada cuyo contenido entero es desconocido.
- **`translations.*`** — Debe llevar al menos una propiedad.

## `feed` — Feed

Una colección de eventos OTE publicada en una URL estable. Un formato de intercambio, no una API.

| Campo | Tipo | Nivel | Por defecto | Descripción | Ejemplos |
| --- | --- | :---: | :---: | --- | --- |
| `specVersion` | const: "0.3.0" | **obligatorio** | → todo evento que lo omita | Versión de OTE Spec a la que se adhiere el feed. Aplica a todos sus eventos. | `"0.3.0"` |
| `title` | string | **obligatorio** | | Nombre del feed, legible por personas. | `"Eventos de PyAlmería"` |
| `description` | string | _recomendado_ | | Descripción breve del feed. | `"Meetups mensuales de Python en Almería."` |
| `url` | string (uri) | _recomendado_ | | URL canónica de la comunidad, directorio u organización que publica el feed. | `"https://pyalmeria.example"` |
| `textLanguage` | string (ote-language-tag) | opcional | → todo evento que lo omita | Idioma en que está escrito el texto libre de este feed — `title` y `description`. Y eso es lo que lo hace barato: quien publica en un solo idioma lo declara una vez para todo el fichero y ningún evento lo repite. Ausente significa desconocido, nunca el inglés ni el idioma de la respuesta HTTP. | `"es"`<br>`"ca"` |
| `organizers` | object[] | opcional | → todo evento que lo omita | Quién organiza los eventos de este feed. No es lo mismo que `title`/`url`, que nombran a quien publica el feed: un agregador publica eventos que no organiza, y debe omitir este campo para que cada evento declare el suyo. | `[{"name":"PyAlmería","url":"https://pyalmeria.example"}]` |
| `license` | string | opcional | → todo evento que lo omita | Licencia del contenido del feed. Identificador SPDX (lista completa en https://spdx.org/licenses/) o URL. | `"CC-BY-4.0"`<br>`"CC0-1.0"` |
| `licenseUrl` | string (uri) | opcional | | URL del texto completo de la licencia. | `"https://creativecommons.org/licenses/by/4.0/"` |
| `updatedAt` | string (date-time) | **obligatorio** | | Cuándo se generó este feed. | `"2026-07-06T10:00:00Z"` |
| `translations` | object | opcional | | El `title` y la `description` DEL PROPIO FEED en otros idiomas. Sus eventos no se traducen aquí: cada uno lleva sus `translations`, y a diferencia de `license` o `textLanguage` este campo no se hereda nunca — el título de un feed no es el nombre de un evento. Exige `textLanguage`, igual que las `translations` de un evento — ver las restricciones del documento. | `{"en":{"title":"Rust Girona events","description":"Weekly online Rust coding sessions, in Catalan and Spanish."}}` |
| `translations.*.title` | string | opcional | | El título del feed, en este idioma. | `"Rust Girona events"` |
| `translations.*.description` | string | opcional | | La descripción del feed, en este idioma. | `"Weekly online Rust coding sessions, in Catalan and Spanish."` |
| `events` | object[] | **obligatorio** | | Los eventos del feed. Cada uno hereda `specVersion` y `license` del feed salvo que declare los suyos. | — |

### Restricciones

Reglas que el schema impone sobre objetos completos y que el nivel de un campo suelto no puede expresar. También generadas de los schemas: el validador rechaza el documento que las incumple.

- **el documento** — Un mapa de traducciones no puede repetir el idioma propio de textLanguage, ni tener dos de sus propias claves para ese mismo idioma.
- **el documento** — Los eventos no pueden repetir el mismo id.
- **el documento** — Ningún evento puede actualizarse después de que se generara el propio feed.
- **el documento** — Las traducciones de cada evento deben tener un textLanguage efectivo (propio o heredado del feed) y no repetirlo.
- **el documento** — Con `translations`, `textLanguage` es obligatorio. Misma regla que en un evento: un mapa de traducciones es inservible si no se sabe en qué idioma está el texto principal. Un feed que traduce su título tiene que decir en qué idioma está ese título.
- **el documento** — license es el único valor por defecto que esta spec nunca deja perderse por omisión: un agregador PUEDE omitir feed.license precisamente porque sus eventos llevan licencias distintas, pero solo si cada evento declara entonces la suya propia — el mismo patrón de omisión disciplinada que organizers/textLanguage ya usan para un agregador, aplicado a una garantía deliberadamente más estricta que la de atribución o idioma, porque redistribuir datos bajo una licencia desconocida es un riesgo legal real, no solo un hueco editorial. CHANGES.log #P032 / DECISIONS.md D029.
- **`translations.*`** — Requiere al menos uno de: `title`, `description`. Misma regla que la traducción propia de un evento: los campos de extensión pueden seguir conviviendo con title/description, pero una entrada cuyo contenido entero es desconocido no es una traducción.
- **`translations.*`** — Debe llevar al menos una propiedad.
